Joystick and main function psuedocode
Implemented x and y coordinates for the button, button input is not implemented due to questions on how it would work and questions on if the input would need to be debounced. Included comments about idea behind code written and ideas about how the main function should work

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "music.h": "c",
         "stdlib.h": "c",
         "math.h": "c",
-        "audio.h": "c"
+        "audio.h": "c",
+        "stdio.h": "c"
     }
 }
