Main Game Logic First Draft
Un-tested main game code with some definite syntax errors.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,12 @@
         "stdlib.h": "c",
         "math.h": "c",
         "audio.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "string.h": "c",
+        "multicore.h": "c",
+        "spi.h": "c",
+        "pio.h": "c",
+        "dma.h": "c",
+        "stdbool.h": "c"
     }
 }
