--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "spi.h": "c",
         "pio.h": "c",
         "dma.h": "c",
-        "stdbool.h": "c"
+        "stdbool.h": "c",
+        "clocks.h": "c"
     }
 }
