--- a/platformio.ini
+++ b/platformio.ini
@@ -6,3 +6,4 @@ framework = picosdk
 debug_tool = picoprobe
 upload_protocol = picoprobe
 monitor_speed = 115200
+#platform_packages = platformio/toolchain-gccarmnoneeabi@^1.140201.0
